--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -1,12 +1,42 @@
 #container {
-    display: flex;        
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;     
-    height: 500px;
+	display: flex;
+	/* flex-direction: column; */
+	justify-content: center;
+	align-items: center;
 }
 
-.input-box
+.input-box {
+	padding: 10px;
+}
+
+#login-button {
+	background-color: #405cf9;
+	border-radius: 6px;
+	border-width: 0;
+	color: #fff;
+	cursor: pointer;
+	font-size: 100%;
+	height: 44px;
+	line-height: 1.15;
+	outline: none;
+	text-align: center;
+	width: 15vw;
+	margin: 0.5em 0 0 0.5em;
+}
+
+#logo-image {
+	margin: 4em 0 4em 0;
+}
+
+.login-input {
+	border: 0;
+	padding: 0.5rem 0.5rem 0.5rem 0;
+	flex: 1;
+	width: 60vw;
+	max-width: 45em;
+}
+
+#wrong-credentials
 {
-	padding: 10px
+    color: red;
 }
