--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -21,6 +21,7 @@
 	outline: none;
 	text-align: center;
 	width: 15vw;
+	min-width: 5rem;
 	margin: 0.5em 0 0 0.5em;
 }
 
@@ -36,7 +37,6 @@
 	max-width: 45em;
 }
 
-#wrong-credentials
-{
-    color: red;
+#wrong-credentials {
+	color: red;
 }
