--- a/src/InputBox/InputBox.css
+++ b/src/InputBox/InputBox.css
@@ -1,20 +1,38 @@
 .input-container {
-	display: inline-flex;
-	flex: 1 1 300px;
+	display: flex;
+	flex-direction: row;
+	/* flex: 1 1 300px; */
 	position: relative;
 	border: 1px solid #ccc;
 	border-radius: 5px;
 	overflow: hidden;
 	margin: 10px;
-}
 
+	/* width: 30%; */
+	/* max-width: 500px; */
+	/* width: 30%; */
+	/* min-width: 15em; */
+	/* width: 100%; */
+
+	flex: 1;
+	
+	min-width: 15em;
+
+	/* width: auto; */
+}
 .input-item {
 	border: 0;
-	padding: 0.5rem 0.5rem 0.5rem 0;
+	color: #737573;
+	padding: 0.5em;
 	flex: 1;
-	/* width: 60vw; */
-	/* border: 1px solid blue; */
-	/* max-width: 500px; */
+}
+
+.select-item {
+	/* width: 32vw; */
+}
+
+.white {
+	background-color: white;
 }
 
 /* @media screen and (min-width: 40em) {
