Added titles to pages and improved stat boxes in the patients page.

--- a/src/AllPatients/AllPatients.css
+++ b/src/AllPatients/AllPatients.css
@@ -6,12 +6,11 @@
 
 .add-patient-container {
 	display: flex;
+	justify-content: center;
 }
 
+/* Fix this */
 .right {
-	margin-left: auto;
-	background-color: blue;
-	color: rgb(243, 243, 243);
 	padding: 12px;
 }
 
