--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -25,8 +25,9 @@
 	margin: 0.5em 0 0 0.5em;
 }
 
-#logo-image {
-	margin: 4em 0 4em 0;
+.logo-image {
+	/* margin: 4em 0 4em 0; */
+	padding-top: 5px;
 }
 
 .login-input {
