--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -3,7 +3,7 @@
 	flex-direction: row;
 	justify-content: space-between;
 
-	background-color: beige;
+	/* background-color: beige; */
 	height: 3em;
 	margin-bottom: 1em
 }
@@ -15,4 +15,18 @@
 
 .point-cursor {
 	cursor: pointer;
+}
+
+.nav-button {
+	background-color: #405cf9;
+	border-radius: 6px;
+	border-width: 0;
+	color: #fff;
+	cursor: pointer;
+	font-size: 100%;
+	outline: none;
+	text-align: center;
+	width: 7rem;
+	min-width: 5rem;
+	margin: 0.5em 0 0 0.5em;
 }
