--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -25,6 +25,11 @@
 	margin: 0.5em 0 0 0.5em;
 }
 
+.login-button:hover
+{
+	background-color: #4e68fa;
+}
+
 .logo-image {
 	padding-top: 5px;
 }
@@ -37,6 +42,6 @@
 	max-width: 45em;
 }
 
-#wrong-credentials {
+.red {
 	color: red;
 }
